[package]
name = "passet-hub-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "R0GUE <go@r0gue.io>"]
edition = "2021"
description = "Paseo variant of Asset Hub parachain runtime"
license = "Apache-2.0"
homepage = "https://polkadot.com/"
repository = "https://github.com/paseo-network/passethub-runtime.git"

[lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(build_opt_level, values("3"))',
  'cfg(build_profile, values("debug", "release"))',
  'cfg(enable_alloc_error_handler)',
  'cfg(fuzzing)',
  'cfg(substrate_runtime)',
] }

[lints.clippy]
all = { level = "allow", priority = 0 }
bind_instead_of_map = { level = "allow", priority = 2 }
borrowed-box = { level = "allow", priority = 2 }
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 }
derivable_impls = { level = "allow", priority = 2 }
eq_op = { level = "allow", priority = 2 }
erasing_op = { level = "allow", priority = 2 }
extra-unused-type-parameters = { level = "allow", priority = 2 }
identity-op = { level = "allow", priority = 2 }
if-same-then-else = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }
needless_option_as_deref = { level = "allow", priority = 2 }
nonminimal-bool = { level = "allow", priority = 2 }
option-map-unit-fn = { level = "allow", priority = 2 }
stable_sort_primitive = { level = "allow", priority = 2 }
too-many-arguments = { level = "allow", priority = 2 }
type_complexity = { level = "allow", priority = 2 }
unit_arg = { level = "allow", priority = 2 }
unnecessary_cast = { level = "allow", priority = 2 }
useless_conversion = { level = "allow", priority = 2 }
while_immutable_condition = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }

[dependencies]
assets-common = { version = "0.21.0" }
bp-asset-hub-rococo = { version = "0.17.0" }
bp-asset-hub-westend = { version = "0.16.0" }
bp-bridge-hub-rococo = { version = "0.21.0" }
bp-bridge-hub-westend = { version = "0.17.0" }
codec = { features = ["derive", "max-encoded-len"] }
cumulus-pallet-aura-ext = { version = "0.20.0" }
cumulus-pallet-parachain-system = { version = "0.20.0" }
cumulus-pallet-session-benchmarking = { version = "21.0.0" }
cumulus-pallet-weight-reclaim = { version = "0.2.0" }
cumulus-pallet-xcm = { version = "0.19.1" }
cumulus-pallet-xcmp-queue = { version = "0.20.0", features = ["bridging"] }
cumulus-primitives-aura = { version = "0.17.0" }
cumulus-primitives-core = { version = "0.18.1" }
cumulus-primitives-utility = { version = "0.20.0" }
frame-benchmarking = { version = "40.0.0", optional = true }
frame-executive = { version = "40.0.0" }
frame-metadata-hash-extension = { version = "0.8.0" }
frame-support = { version = "40.1.0" }
frame-system-benchmarking = { version = "40.0.0", optional = true }
frame-system-rpc-runtime-api = { version = "36.0.0" }
frame-system = { version = "40.1.0" }
frame-try-runtime = { version = "0.46.0", optional = true }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.22", default-features = false }
pallet-asset-conversion-ops = { version = "0.8.0" }
pallet-asset-conversion-tx-payment = { version = "22.0.0" }
pallet-asset-conversion = { version = "22.0.0" }
pallet-asset-rewards = { version = "0.2.0" }
pallet-assets-freezer = { version = "0.7.0" }
pallet-assets = { version = "42.0.0" }
pallet-aura = { version = "39.0.0" }
pallet-authorship = { version = "40.0.0" }
pallet-balances = { version = "41.1.0" }
pallet-collator-selection = { version = "21.0.0" }
pallet-message-queue = { version = "43.1.0" }
pallet-migrations = { version = "10.1.0" }
pallet-multisig = { version = "40.1.0" }
pallet-nft-fractionalization = { version = "23.0.0" }
pallet-nfts-runtime-api = { version = "26.0.0" }
pallet-nfts = { version = "34.1.0" }
pallet-proxy = { version = "40.1.0" }
pallet-revive = { version = "0.5.0" }
pallet-session = { version = "40.0.0" }
pallet-state-trie-migration = { version = "44.1.0" }
pallet-timestamp = { version = "39.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0" }
pallet-transaction-payment = { version = "40.0.0" }
pallet-uniques = { version = "40.1.0" }
pallet-utility = { version = "40.0.0" }
pallet-xcm-benchmarks = { version = "20.0.0", optional = true }
pallet-xcm-bridge-hub-router = { version = "0.18.0" }
pallet-xcm = { version = "19.1.0" }
parachain-info = { version = "0.20.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "21.0.0" }
polkadot-parachain-primitives = { version = "16.1.0" }
polkadot-runtime-common = { version = "19.1.0" }
primitive-types = { features = ["codec", "num-traits", "scale-info"] }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
snowbridge-inbound-queue-primitives = { version = "0.2.0" }
snowbridge-outbound-queue-primitives = { version = "0.2.1" }
snowbridge-pallet-system-frontend = { version = "0.2.0" }
snowbridge-runtime-common = { version = "0.13.0" }
sp-api = { version = "36.0.1" }
sp-block-builder = { version = "36.0.0" }
sp-consensus-aura = { version = "0.42.0" }
sp-core = { version = "36.1.0" }
sp-genesis-builder = { version = "0.17.0" }
sp-inherents = { version = "36.0.0" }
sp-io = { version = "40.0.1" }
sp-keyring = { version = "41.0.0" }
sp-offchain = { version = "36.0.0" }
sp-runtime = { version = "41.1.0" }
sp-session = { version = "38.1.0" }
sp-std = { version = "14.0.0" }
sp-storage = { version = "22.0.0" }
sp-transaction-pool = { version = "36.0.0" }
sp-version = { version = "39.0.0" }
testnet-parachains-constants = { version = "13.0.0", features = ["westend"] }
westend-runtime-constants = { version = "20.0.0" }
xcm-builder = { version = "20.1.0", default-features = false, package = "staging-xcm-builder" }
xcm-executor = { version = "19.1.0", default-features = false, package = "staging-xcm-executor" }
xcm-runtime-apis = { version = "0.7.0" }
xcm = { version = "16.1.0", default-features = false, package = "staging-xcm" }

[dev-dependencies]
asset-test-utils = { version = "23.0.0", default-features = true }
parachains-runtimes-test-utils = { version = "22.0.0", default-features = true }

[build-dependencies]
substrate-wasm-builder = { version = "26.0.1", optional = true, default-features = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "assets-common/runtime-benchmarks",
  "cumulus-pallet-parachain-system/runtime-benchmarks",
  "cumulus-pallet-session-benchmarking/runtime-benchmarks",
  "cumulus-pallet-weight-reclaim/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  "cumulus-primitives-core/runtime-benchmarks",
  "cumulus-primitives-utility/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-asset-conversion-ops/runtime-benchmarks",
  "pallet-asset-conversion-tx-payment/runtime-benchmarks",
  "pallet-asset-conversion/runtime-benchmarks",
  "pallet-asset-rewards/runtime-benchmarks",
  "pallet-assets-freezer/runtime-benchmarks",
  "pallet-assets/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "pallet-message-queue/runtime-benchmarks",
  "pallet-migrations/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-nft-fractionalization/runtime-benchmarks",
  "pallet-nfts/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-revive/runtime-benchmarks",
  "pallet-state-trie-migration/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-transaction-payment/runtime-benchmarks",
  "pallet-uniques/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-xcm-benchmarks/runtime-benchmarks",
  "pallet-xcm-bridge-hub-router/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "parachains-common/runtime-benchmarks",
  "polkadot-parachain-primitives/runtime-benchmarks",
  "polkadot-runtime-common/runtime-benchmarks",
  "snowbridge-inbound-queue-primitives/runtime-benchmarks",
  "snowbridge-pallet-system-frontend/runtime-benchmarks",
  "snowbridge-runtime-common/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
  "xcm-runtime-apis/runtime-benchmarks",
  "xcm/runtime-benchmarks",
]
try-runtime = [
  "cumulus-pallet-aura-ext/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-weight-reclaim/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",
  "frame-executive/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "frame-try-runtime/try-runtime",
  "pallet-asset-conversion-ops/try-runtime",
  "pallet-asset-conversion-tx-payment/try-runtime",
  "pallet-asset-conversion/try-runtime",
  "pallet-asset-rewards/try-runtime",
  "pallet-assets-freezer/try-runtime",
  "pallet-assets/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-collator-selection/try-runtime",
  "pallet-message-queue/try-runtime",
  "pallet-migrations/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-nft-fractionalization/try-runtime",
  "pallet-nfts/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-revive/try-runtime",
  "pallet-session/try-runtime",
  "pallet-state-trie-migration/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-uniques/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-xcm-bridge-hub-router/try-runtime",
  "pallet-xcm/try-runtime",
  "parachain-info/try-runtime",
  "polkadot-runtime-common/try-runtime",
  "snowbridge-pallet-system-frontend/try-runtime",
  "snowbridge-runtime-common/try-runtime",
  "sp-runtime/try-runtime",
]
std = [
  "assets-common/std",
  "bp-asset-hub-rococo/std",
  "bp-asset-hub-westend/std",
  "bp-bridge-hub-rococo/std",
  "bp-bridge-hub-westend/std",
  "codec/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-session-benchmarking/std",
  "cumulus-pallet-weight-reclaim/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-aura/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-utility/std",
  "frame-benchmarking?/std",
  "frame-executive/std",
  "frame-metadata-hash-extension/std",
  "frame-support/std",
  "frame-system-benchmarking?/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "frame-try-runtime?/std",
  "log/std",
  "pallet-asset-conversion-ops/std",
  "pallet-asset-conversion-tx-payment/std",
  "pallet-asset-conversion/std",
  "pallet-asset-rewards/std",
  "pallet-assets-freezer/std",
  "pallet-assets/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collator-selection/std",
  "pallet-message-queue/std",
  "pallet-migrations/std",
  "pallet-multisig/std",
  "pallet-nft-fractionalization/std",
  "pallet-nfts-runtime-api/std",
  "pallet-nfts/std",
  "pallet-proxy/std",
  "pallet-revive/std",
  "pallet-session/std",
  "pallet-state-trie-migration/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-uniques/std",
  "pallet-utility/std",
  "pallet-xcm-benchmarks?/std",
  "pallet-xcm-bridge-hub-router/std",
  "pallet-xcm/std",
  "parachain-info/std",
  "parachains-common/std",
  "polkadot-parachain-primitives/std",
  "polkadot-runtime-common/std",
  "primitive-types/std",
  "scale-info/std",
  "serde_json/std",
  "snowbridge-inbound-queue-primitives/std",
  "snowbridge-outbound-queue-primitives/std",
  "snowbridge-pallet-system-frontend/std",
  "snowbridge-runtime-common/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-genesis-builder/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-keyring/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-storage/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "substrate-wasm-builder",
  "testnet-parachains-constants/std",
  "westend-runtime-constants/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm-runtime-apis/std",
  "xcm/std",
]

# Enable the metadata hash generation in the wasm builder.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = ["metadata-hash"]
