[workspace.package]
authors = [ "Parity Technologies <admin@parity.io>", "R0GUE <go@r0gue.io>" ]
description = "Paseo variant of Asset Hub parachain runtime"
edition = "2021"
homepage = "https://polkadot.com/"
license = "Apache-2.0"
repository = "https://github.com/paseo-network/passethub-runtime.git"
version = "0.1.0"

[workspace]
members = [ "paseo-parachains-constants", "passet-hub-runtime" ]
resolver = "2"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
	'cfg(substrate_runtime)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
bind_instead_of_map = { level = "allow", priority = 2 }
borrowed-box = { level = "allow", priority = 2 }
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 }
derivable_impls = { level = "allow", priority = 2 }
eq_op = { level = "allow", priority = 2 }
erasing_op = { level = "allow", priority = 2 }
extra-unused-type-parameters = { level = "allow", priority = 2 }
identity-op = { level = "allow", priority = 2 }
if-same-then-else = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }
needless_option_as_deref = { level = "allow", priority = 2 }
nonminimal-bool = { level = "allow", priority = 2 }
option-map-unit-fn = { level = "allow", priority = 2 }
stable_sort_primitive = { level = "allow", priority = 2 }
too-many-arguments = { level = "allow", priority = 2 }
type_complexity = { level = "allow", priority = 2 }
unit_arg = { level = "allow", priority = 2 }
unnecessary_cast = { level = "allow", priority = 2 }
useless_conversion = { level = "allow", priority = 2 }
while_immutable_condition = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }

[workspace.dependencies]
# Local deps
asset-test-utils = { version = "23.0.0", default-features = true }
assets-common = { version = "0.21.0" }
bp-asset-hub-rococo = { version = "0.17.0" }
bp-asset-hub-westend = { version = "0.16.0" }
bp-bridge-hub-rococo = { version = "0.21.0" }
bp-bridge-hub-westend = { version = "0.17.0" }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec", features = [
	"derive",
	"max-encoded-len",
] }
cumulus-pallet-aura-ext = { version = "0.20.0" }
cumulus-pallet-parachain-system = { version = "0.20.0" }
cumulus-pallet-session-benchmarking = { version = "21.0.0" }
cumulus-pallet-weight-reclaim = { version = "0.2.0" }
cumulus-pallet-xcm = { version = "0.19.1" }
cumulus-pallet-xcmp-queue = { version = "0.20.0", features = [ "bridging" ] }
cumulus-primitives-aura = { version = "0.17.0" }
cumulus-primitives-core = { version = "0.18.1" }
cumulus-primitives-utility = { version = "0.20.0" }
frame-benchmarking = { version = "40.0.0" }
frame-executive = { version = "40.0.0" }
frame-metadata-hash-extension = { version = "0.8.0" }
frame-support = { version = "40.1.0" }
frame-system = { version = "40.1.0" }
frame-system-benchmarking = { version = "40.0.0" }
frame-system-rpc-runtime-api = { version = "36.0.0" }
frame-try-runtime = { version = "0.46.0" }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.22", default-features = false }
pallet-asset-conversion = { version = "22.0.0" }
pallet-asset-conversion-ops = { version = "0.8.0" }
pallet-asset-conversion-tx-payment = { version = "22.0.0" }
pallet-asset-rewards = { version = "0.2.0" }
pallet-assets = { version = "42.0.0" }
pallet-assets-freezer = { version = "0.7.0" }
pallet-aura = { version = "39.0.0" }
pallet-authorship = { version = "40.0.0" }
pallet-balances = { version = "41.1.0" }
pallet-collator-selection = { version = "21.0.0" }
pallet-message-queue = { version = "43.1.0" }
pallet-migrations = { version = "10.1.0" }
pallet-multisig = { version = "40.1.0" }
pallet-nft-fractionalization = { version = "23.0.0" }
pallet-nfts = { version = "34.1.0" }
pallet-nfts-runtime-api = { version = "26.0.0" }
pallet-proxy = { version = "40.1.0" }
pallet-revive = { version = "0.5.0" }
pallet-session = { version = "40.0.0" }
pallet-state-trie-migration = { version = "44.1.0" }
pallet-timestamp = { version = "39.0.0" }
pallet-transaction-payment = { version = "40.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0" }
pallet-uniques = { version = "40.1.0" }
pallet-utility = { version = "40.0.0" }
pallet-xcm = { version = "19.1.0" }
pallet-xcm-benchmarks = { version = "20.0.0" }
pallet-xcm-bridge-hub-router = { version = "0.18.0" }
parachain-info = { version = "0.20.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "21.0.0" }
parachains-runtimes-test-utils = { version = "22.0.0", default-features = true }
paseo-parachains-constants = { path = "./paseo-parachains-constants" }
polkadot-core-primitives = { version = "17.1.0", default-features = false }
polkadot-parachain-primitives = { version = "16.1.0" }
polkadot-primitives = { version = "18.1.0", default-features = false }
polkadot-runtime-common = { version = "19.1.0" }
primitive-types = { version = "0.13.1", default-features = false, features = [
	"codec",
	"num-traits",
	"scale-info",
] }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.13.1" }
snowbridge-inbound-queue-primitives = { version = "0.2.0" }
snowbridge-outbound-queue-primitives = { version = "0.2.1" }
snowbridge-pallet-system-frontend = { version = "0.2.0" }
snowbridge-runtime-common = { version = "0.13.0" }
sp-api = { version = "36.0.1" }
sp-block-builder = { version = "36.0.0" }
sp-consensus-aura = { version = "0.42.0" }
sp-core = { version = "36.1.0" }
sp-genesis-builder = { version = "0.17.0" }
sp-inherents = { version = "36.0.0" }
sp-io = { version = "40.0.1" }
sp-keyring = { version = "41.0.0" }
sp-offchain = { version = "36.0.0" }
sp-runtime = { version = "41.1.0" }
sp-session = { version = "38.1.0" }
sp-std = { version = "14.0.0" }
sp-storage = { version = "22.0.0" }
sp-transaction-pool = { version = "36.0.0" }
sp-trie = { version = "39.1.0", default-features = false }
sp-version = { version = "39.0.0" }
sp-weights = { version = "31.1.0", default-features = false }
substrate-wasm-builder = { version = "26.0.1", default-features = true }
xcm = { version = "16.1.0", default-features = false, package = "staging-xcm" }
xcm-builder = { version = "20.1.0", default-features = false, package = "staging-xcm-builder" }
xcm-executor = { version = "19.1.0", default-features = false, package = "staging-xcm-executor" }
xcm-runtime-apis = { version = "0.7.0" }
