[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "paseo-parachains-constants"
repository.workspace = true
version.workspace = true

[dependencies]
codec = { workspace = true }
cumulus-primitives-core = { workspace = true }
frame-support = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-trie = { workspace = true, optional = true }
sp-weights = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }

[features]
default = [ "std" ]
fast-runtime = [  ]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-trie",
	"xcm-builder/runtime-benchmarks",
]
std = [
	"codec/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"polkadot-core-primitives/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std",
	"xcm-builder/std",
	"xcm/std",
]
